--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -9,7 +9,7 @@
 
   <div *ngFor="let project of projects | async | category:filterByCategory" class="panel panel-default">
     <div class="panel-body">
-      <h3><em>{{project.name}}</em> by {{project.creator}}</h3>
+      <h3 (click)='goToDetailPage(project)'><em>{{project.name}}</em> by {{project.creator}}</h3>
       <p>{{project.category}}</p>
     </div>
   </div>
