--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
   <router-outlet></router-outlet>
 </div>
 
-<!-- <footer class="footer">
+<footer class="footer">
   <div class="container">
     <a class="text-muted" routerLink="admin">Admin</a>
   </div>
-</footer> -->
+</footer>
