add update button to change project object in database.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -35,3 +35,7 @@
   </div>
   <button (click)='submitForm(newName.value, newCreator.value, newGoal.value, newDescription.value, newCategory.value)'>Create!</button>
 </div>
+
+<div>
+  <app-projects></app-projects>
+</div>
